# hpfp

./: .gitignore  LICENSE  README.md  test.hs
00/: index.md
01/: 01.md  exercises.md  index.md
02/: 02.md  FunctionWithWhere.hs  HealTheSick.hs  Learn.hs  Levels.hs  MoreFun.hs  SevenIsNotThree.hs  divModQuotRemCompare.hs  exercises.md  index.md  learn.hs  morefun.hs  practice.hs
03/: 03.md  Exercise2.hs  Exercise3.hs  Exercise4.hs  ex2.hs  ex3.hs  ex4.hs  ex5.hs  exercises.md  index.md  print2.hs  print3.hs  print3broken.hs  print3flipped.hs
04/: 04.md  CorrectingSyntax.hs  CorrectingSyntax1.hs  CorrectingSyntax2.hs  CorrectingSyntax3.hs  Exercise10.hs  Exercises.hs  Fruit.hs  correctingsyntax1.hs  correctingsyntax2.hs  correctingsyntax3.hs  ex10.hs  exercises.md  greetIfCool1.hs  greetIfCool2.hs  index.md  mood.hs
05/: 05.md  Arith3Broken.hs  SideMeasure.hs  Sing.hs  arith3broken.hs  exercises.md  fixit1.hs  fixit2.hs  index.md
06/: 06.md  Datatype.hs  EqInstances.hs  Exercises.hs  TypeKwonDo.hs  ex1.hs  ex2.hs  ex4.hs  exdatatype.hs  exercises.md  exmatch1.hs  exmatch2.hs  index.md
07/: 07.md  Arith4.hs  AvgGrade.hs  CasePractice.hs  Digit.hs  FoldBool.hs  LetsWriteCode.hs  TensDigit.hs  VarietyPack.hs  arith2.hs  arith4.hs  avgGrade.hs  cex1.hs  cex2.hs  exercises.md  iex1.hs  index.md  matchingTuples1.hs  registeredUser1.hs  registeredUser2.hs
08/: DividedBy.hs  RecursiveMult.hs  RecursiveSum.hs  ReviewingCurrying.hs  WordNumber.hs  cex2.hs  cex3.hs  dividedby.hs  exercises.md  index.md  mccarthy91.hs  rmult.hs  rsum.hs  wordnumber.hs
09/: 10filter.hs  CharExercises.hs  EnumFromTo.hs  FearfulSymmetry.hs  Filtering.hs  FoldBool.hs  SquareCube.hs  StdFunc.hs  ZippingExercises.hs  cipher.hs  enum.hs  exercises.hs  exercises.md  foldbool.hs  index.md  listcomp.hs  poemlines.hs  stdfunc.hs  stringsplit.hs  zipex.hs
1/: exercises.md  notes.md
10/: .exercises.md.swp  DatabaseProcessing.hs  Folds.hs  FunctionsUsingFolds.hs  WarmUp.hs  exercises.hs  exercises.md  folds.hs  folds2.hs  index.md  scans.hs
11/: AsPatterns.hs  BinaryTree.hs  Hutton.hs  LanguageExercises.hs  LogicGoats.hs  Phone.hs  Programmers.hs  Vehicles.hs  Vignere.hs  aspatterns.hs  binarytree.hs  exercises.md  farm.hs  hutton.hs  index.md  jammin.hs  phone.hs  phone2.hs  phone4.hs  price.hs  price2.hs  programmer.hs  toomany.hs
12/: BinaryTreeUnfold.hs  EitherLib.hs  MaybeLib.hs  Natural.hs  StringProcessing.hs  Unfolds.hs  binarytreeunfold.hs  eitherlib.hs  exercises.md  index.md  maybelib.hs  natural.hs  stringprocessing.hs  unfolds.hs
13/: CipherIO.hs  ExitSuccess.hs  Person.hs  VignereIO.hs  cipherio.hs  exercises.md  exitsuccess.hs  index.md  person.hs
14/: .exercises.md.swp  arbitrary.hs  coarbitrary.hs  exercises.md  index.md
14/addition/: Addition.hs  README.md  addition.cabal
14/ciphers/: README.md  ciphers.cabal
14/ciphers/src/: Cipher.hs
14/ciphers/test/: Spec.hs
14/exercises/: LICENSE  exercises.cabal
14/exercises/app/: Main.hs
14/exercises/src/: Exercises.hs
14/exercises/test/: Spec.hs  WordNumberTest.hs
14/hangman/: hangman.cabal
14/hangman/src/: Hangman.hs  Main.hs
14/hangman/test/: Spec.hs
14/morse/: morse.cabal
14/morse/src/: Main.hs  Morse.hs
14/morse/test/: tests.hs
14/wordnumber/: README.md  wordnumber.cabal
15/: .exercises.md.swp  Madness.hs  MaybeAnother.hs  Mem.hs  Optional.hs  Patience.hs  SemigroupMonoidExercises.hs  exercises.md  index.md  madness.hs  maybeanother.hs  mem.hs  optional.hs  patience.hs  semigroupmonoidexercises.hs
16/: HeavyLifing.hs  Instances.hs  PossiblyEither.hs  Rearrange.hs  exercises.md  functorinstances.hs  heavylifting.hs  index.md  instance.hs  possiblyeither.hs  rearrange.hs
16/exercises/: exercises.cabal
16/exercises/src/: FunctorInstances.hs
17/: Constant.hs  FixerUpper.hs  Identity.hs  Lookups.hs  constant.hs  exercises.md  identity.hs  index.md  lookups.hs
17/applicativeexercises/: README.md  applicativeexercises.cabal
17/applicativeexercises/src/: Apl1.hs  ChapterExercises.hs  ListApplicative.hs
18/: Bind.hs  EitherMonad.hs  eithermonad.hs  exercises.md  index.md  kliesli.hs
19/: index.md  notes.md
19/applyingstructure/: .gitignore  README.md  applyingstructure.cabal
19/applyingstructure/app/: Main.hs
19/applyingstructure/src/: ScottyExample.hs
20/: ChapterExercises.hs  LibraryFunctions.hs  chapterexercises.hs  exercises.md  index.md  libraryfunctions.hs
21/: exercises.md  index.md
21/exercises/: README.md  exercises.cabal  stack.yaml
21/exercises/src/: SkiFree.hs  TraversableInstances.hs
22/: Ask.hs  NewBeginning.hs  Person.hs  ReaderPractice.hs  ReadingComprehension.hs  WarmingUp.hs  exercises.md  index.md
23/: ChapterExercises.hs  FizzBuzz.hs  LEtat.hs  RandomExample.hs  exercises.md  fizzBuzz.hs  index.md
24/: exercises.md  index.md
24/parselog/: README.md  log.txt  parselog.cabal  stack.yaml
24/parselog/src/: ParseLog.hs
24/parselog/test/: Spec.hs
25/: Bifunctor.hs  IdentityT.hs  Twinplicative.hs  index.md
26/: EitherT.hs  MaybeT.hs  OuterInner.hs  ReaderT.hs  StateT.hs  index.md
26/exercise/: exercise.cabal  stack.yaml
26/exercise/src/: ChapterExercise.hs  ChapterExercises.hs  HitCounter.hs  Lib.hs  Morra.hs
26/scottyy/: scottyy.cabal  shell.nix
26/scottyy/src/: Scottyy.hs  Scottyy2.hs
27/: Blah.hs  CoreDump.hs  DebugTrace.hs  Evaluate.hs  Exercise.hs  LazyInHostileTerritory.hs  ManualBang.hs  OutsideIn.hs  StrictList.hs  StrictTest.hs  StrictTest1.hs  StrictTest2.hs  StrictTest3.hs  StrictTest4.hs  index.md
28/: index.md
29/: index.md  (+1 more)
29/inputOutput/: README.md  inputOutput.cabal  stack.yaml  test.ini
29/inputOutput/src/: ConfigDirectories.hs  DataIni.hs  IORefTrans.hs  NestedIO.hs  NoSharing.hs  VignereFile.hs  WhatHappens.hs
30/wrong/: LICENSE  asyncEx  wrong.cabal
30/wrong/src/: AsynchronousExceptions.hs  OurExceptions.hs  OurExceptions2.hs  StoppingTheParty.hs  WhySomeException.hs  canICatch.hs  catchMeIfYouCan.hs  willIFail.hs  writePls.hs
31/fingerd/: Debug.hs  finger.db  fingerd.cabal
31/fingerd/src/: Main.hs  UserAdd.hs
(+80 files in other folders)
