name:                ciphers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/johnchandlerburnham/ciphers#readme
license:             BSD3
license-file:        LICENSE
author:              John Chandler Burnham
maintainer:          jcb@johnchandlerburnham.com
copyright:           2017 John Chandler Burnham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cipher
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

test-suite ciphers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:       Cipher
  build-depends:       base
                     , ciphers
                     , hspec
                     , containers
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

