name:                exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/johnchandlerburnham/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              John Chandler Burnham
maintainer:          jcb@johnchandlerburnham.com
copyright:           2017 John Chandler Burnham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Exercises
                     , WordNumber
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

executable exercises-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , exercises
  default-language:    Haskell2010

test-suite exercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:       Exercises
                     , WordNumber
                     , WordNumberTest
  build-depends:       base
                     , exercises
                     , hspec
                     , containers
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/johnchandlerburnham/exercises
