name:                wordnumber
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              John Chandler Burnham
maintainer:          jcb@johnchandlerburnham.com
copyright:           2017 John Chandler Burnham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10



library
  exposed-modules:     WordNumber 
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hspec
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

executable wordnumber
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  hs-source-dirs:      src
  build-depends:       base
                     , wordnumber
                     , hspec
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base
                     , wordnumber
                     , hspec
                     , containers
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  default-language:    Haskell2010
