name:                exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/johnchandlerburnham/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              John Chandler Burnham
maintainer:          jcb@johnchandlerburnham.com
copyright:           2017 John Chandler Burnham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FunctorInstances
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

