name:                applyingstructure
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/bitemyapp/shawty#readme
license:             BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable shawty
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bitemyapp/shawty-prime
