name:                parselog
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              John Chandler Burnham
maintainer:          jcb@johnchandlerburnham.com
copyright:           2017 John Chandler Burnham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ParseLog
  build-depends:       base >= 4.7 && < 5
                     , parsers
                     , trifecta
                     , transformers
                     , containers
                     , time
                     , scientific
  default-language:    Haskell2010

test-suite parselog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parselog
                     , containers
                     , QuickCheck
                     , hspec
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

