name:                inputOutput
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/johnchandlerburnham/inputOutput#readme
license:             BSD3
license-file:        LICENSE
author:              John C. Burnham
maintainer:          jcb@johnchandlerburnham.com
copyright:           2018 John C. Burnham
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     DataIni
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , trifecta
                     , raw-strings-qq
                     , directory
                     , filepath
                     , bytestring
                     , text
                     , containers

executable inputOutput
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable vignere
  hs-source-dirs:      src
  main-is:             VignereFile.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
